# gcode-imager

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic.py  cube.gcode
gcode_imager/: __init__.py  gcode.py  gcode2img.py  grapher.py  parser.py
